# tui-widgets

./: .markdownlint-cli2.yaml  .markdownlint.yaml  AGENTS.md  BREAKING_CHANGES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md  bacon.toml  cliff.toml  release-plz.toml  rustfmt.toml
.github/: dependabot.yml
.github/release-plz/: tui-bar-graph.toml  tui-big-text.toml  tui-box-text.toml  tui-cards.toml  tui-popup.toml  tui-prompts.toml  tui-qrcode.toml  tui-scrollbar.toml  tui-scrollview.toml  tui-widgets.toml
.github/workflows/: check.yml  ci.yml  release-plz.yml  release.yml  tui-scrollbar.yml
examples/: README.md  alignment.rs  demo.rs  demo.tape  hello_world.rs  hello_world.tape  paragraph.rs  pixel_size.rs  pixel_size.tape  popup.rs  scrollview.rs  scrollview.tape  state.rs  state.tape  stopwatch.rs  stopwatch.tape
src/: big_text.rs  lib.rs  pixel_size.rs  popup.rs  scroll_view.rs  state.rs  widget.rs
tui-bar-graph/: CHANGELOG.md  Cargo.toml  README.md
tui-bar-graph/examples/: braille.tape  simple-bar-graph.rs  solid.tape  tui-bar-graph-braille-magma.tape  tui-bar-graph-braille-rainbow.tape  tui-bar-graph-braille-viridis.tape  tui-bar-graph-octant-inferno.tape  tui-bar-graph-octant-rainbow.tape  tui-bar-graph-octant-viridis.tape  tui-bar-graph-quadrant-magma.tape  tui-bar-graph-quadrant-plasma.tape  tui-bar-graph-quadrant-sinebow.tape  tui-bar-graph-solid-inferno.tape  tui-bar-graph-solid-plasma.tape  tui-bar-graph-solid-sinebow.tape  tui-bar-graph.rs
tui-bar-graph/src/: lib.rs
tui-big-text/: .markdownlint.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  bacon.toml  cliff.toml  typos.toml
tui-big-text/.github/workflows/: check.yml
tui-big-text/examples/: README.md  alignment.rs  alignment.tape  big_text.rs  big_text.tape  demo.rs  demo.tape  pixel_size.rs  pixel_size.tape  stopwatch.rs  stopwatch.tape
tui-big-text/examples/common/: mod.rs
tui-big-text/src/: big_text.rs  lib.rs  pixel_size.rs
tui-box-text/: CHANGELOG.md  Cargo.toml  README.md
tui-box-text/examples/: box_text.rs  box_text.tape
tui-box-text/src/: lib.rs
tui-cards/: CHANGELOG.md  Cargo.toml  README.md
tui-cards/examples/: card.rs  card.tape
tui-cards/src/: lib.rs
tui-popup/: CHANGELOG.md  Cargo.toml  README.md  bacon.toml
tui-popup/examples/: demo.rs  demo.tape  interactive.rs  paragraph.rs  paragraph.tape  popup.rs  popup.tape  state.rs  state.tape
tui-popup/examples/terminal/: mod.rs
tui-popup/src/: known_size.rs  known_size_wrapper.rs  lib.rs  popup.rs  popup_state.rs  sized_widget.rs  sized_wrapper.rs
tui-prompts/: CHANGELOG.md  Cargo.toml  README.md
tui-prompts/examples/: multi_line.rs  select.rs  select.tape  text.rs  utc_time.rs
tui-prompts/examples/tui/: mod.rs
tui-prompts/src/: lib.rs  prompt.rs  select_prompt.rs  select_state.rs  status.rs  text_prompt.rs  text_state.rs
tui-prompts/src/datetime/: datetime_prompt.rs  datetime_state.rs  mod.rs  numeric_child.rs
tui-qrcode/: CHANGELOG.md  Cargo.toml  README.md
tui-qrcode/examples/: qrcode.rs  qrcode.tape
tui-qrcode/src/: lib.rs
tui-scrollbar/: CHANGELOG.md  Cargo.toml  README.md
tui-scrollbar/docs/: scrollbar-implementation-plan.md
tui-scrollbar/examples/: scrollbar.rs  scrollbar_mouse.rs  scrollbar_mouse.tape
tui-scrollbar/src/: glyphs.rs  input.rs  lengths.rs  lib.rs  metrics.rs
tui-scrollbar/src/scrollbar/: interaction.rs  mod.rs  render.rs
tui-scrollview/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dependabot.yml
tui-scrollview/examples/: horizontal.rs  scrollview.rs  tabs.rs
tui-scrollview/src/: lib.rs  scroll_view.rs  state.rs
