[workspace]
resolver = "2"
members = ["tui-*"]
default-members = ["tui-*"]

[workspace.package]
authors = ["Joshka"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/tui-widgets"
edition = "2021"
rust-version = "1.82.0"
categories = ["command-line-interface", "gui"]
keywords = ["cli", "console", "ratatui", "terminal", "tui"]

[workspace.dependencies]
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
# note that currently, the crossterm version must match the one used by ratatui. This will be fixed
# in Ratatui 0.30
crossterm = { version = "0.28" }
derive_builder = "0.20"
derive-getters = "0.5"
derive_setters = "0.1"
document-features = "0.2"
futures = "0.3"
itertools = "0.14"
indoc = "2"
lipsum = "0.9"
pretty_assertions = "1.4"
rand = "0.9"
ratatui = { version = "0.29", default-features = false }
ratatui-macros = "0.6"
rstest = "0.25"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.45" }

[lints.rust]
unused = "warn"

[lints.clippy]
# cargo = "warn"    # when this fails, investigate and disable the lint if needed, noting the reason
pedantic = "warn"
nursery = "warn"


[package]
name = "tui-widgets"
description = "A collection of useful widgets for building terminal user interfaces using Ratatui"
version = "0.4.1"
documentation = "https://docs.rs/tui-widgets"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
#! # features
## By default, all the widgets are enabled.
default = [
    "bar-graph",
    "big-text",
    "box-text",
    "cards",
    "popup",
    "prompts",
    "qrcode",
    "scrollview",
]
## Enables the [`bar_graph`] widget
bar-graph = ["tui-bar-graph"]
## Enables the [`big_text`] widget
big-text = ["tui-big-text"]
## Enables the [`box_text`] widget
box-text = ["tui-box-text"]
## Enables the [`cards`] widget
cards = ["tui-cards"]
## Enables the [`popup`] widget
popup = ["tui-popup"]
## Enables the [`prompts`] widget
prompts = ["tui-prompts"]
## Enables the [`qrcode`] widget
qrcode = ["tui-qrcode"]
## Enables the [`scrollview`] widget
scrollview = ["tui-scrollview"]

[dependencies]
document-features.workspace = true
ratatui = { workspace = true }
tui-bar-graph = { version = "0.1.0", path = "tui-bar-graph", optional = true }
tui-big-text = { version = "0.7.0", path = "tui-big-text", optional = true }
tui-box-text = { version = "0.2.0", path = "tui-box-text", optional = true }
tui-cards = { version = "0.2.0", path = "tui-cards", optional = true }
tui-popup = { version = "0.6.0", path = "tui-popup", optional = true }
tui-prompts = { version = "0.5.0", path = "tui-prompts", optional = true }
tui-qrcode = { version = "0.1.0", path = "tui-qrcode", optional = true }
tui-scrollview = { version = "0.5.1", path = "tui-scrollview", optional = true }
