[package]
name = "tui-box-text"
description = "A Ratatui widget for displaying text using the box drawing characters"
version = "0.3.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
color-eyre.workspace = true
indoc.workspace = true
ratatui-core.workspace = true

[dev-dependencies]
ratatui = { workspace = true, default-features = true }
