[package]
name = "tui-cards"
version = "0.3.0"
description = "A playing card widget for Ratatui"
documentation = "https://docs.rs/tui-cards"


authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
color-eyre.workspace = true
indoc.workspace = true
strum.workspace = true
itertools.workspace = true
ratatui-core.workspace = true

[dev-dependencies]
ratatui = { workspace = true, default-features = true }
