[package]
name = "tui-popup"
version = "0.6.2"
description = "A simple popup for ratatui"
documentation = "https://docs.rs/tui-popup"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# see https://doc.rust-lang.org/nightly/rustdoc/scraped-examples.html
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

## Enables processing crossterm mouse events using [`PopupState::handle_mouse_event`]
crossterm = ["ratatui/crossterm"]

[dependencies]
document-features.workspace = true
derive-getters.workspace = true
derive_setters.workspace = true
ratatui = { workspace = true, features = ["unstable-widget-ref"] }

[dev-dependencies]
pretty_assertions.workspace = true
color-eyre.workspace = true
lipsum.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[[example]]
name = "paragraph"
required-features = ["crossterm"]
doc-scrape-examples = true        # applies to all examples, not just this one

[[example]]
name = "popup"
required-features = ["crossterm"]

[[example]]
name = "state"
required-features = ["crossterm"]
