[package]
name = "tui-prompts"
version = "0.5.0"
description = "A library for building interactive prompts for ratatui."

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
ratatui = { workspace = true, features = ["crossterm"] }
ratatui-macros.workspace = true
rstest.workspace = true

[dev-dependencies]
clap.workspace = true
color-eyre.workspace = true
indoc.workspace = true
