[package]
name = "tui-prompts"
version = "0.6.0"
description = "A library for building interactive prompts for ratatui."

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm.workspace = true
itertools.workspace = true
ratatui-core.workspace = true
ratatui-widgets.workspace = true
ratatui-macros.workspace = true
unicode-width = "0.2.2"

[dev-dependencies]
clap.workspace = true
color-eyre.workspace = true
indoc.workspace = true
ratatui = { workspace = true, default-features = true }
rstest.workspace = true
