[package]
name = "tui-qrcode"
version = "0.2.2"
description = "A Ratatui widget for displaying QR codes in the terminal"
documentation = "https://docs.rs/tui-qrcode"

authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
color-eyre.workspace = true
qrcode = { version = "0.14.1", default-features = false }
ratatui-core.workspace = true

[dev-dependencies]
rstest.workspace = true
ratatui = { workspace = true, features = ["crossterm"] }
