[package]
name = "tui-scrollbar"
version = "0.2.2"
description = "A Ratatui scrollbar widget with fractional thumb rendering"
documentation = "https://docs.rs/tui-scrollbar"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# see https://doc.rust-lang.org/nightly/rustdoc/scraped-examples.html
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crossterm_0_28 = { version = "0.28", package = "crossterm", optional = true }
crossterm_0_29 = { version = "0.29", package = "crossterm", optional = true }
document-features.workspace = true
ratatui-core.workspace = true

[features]
default = []

## Enables `ScrollBar::handle_mouse_event` for crossterm mouse events (latest supported version,
## currently `crossterm` 0.29).
crossterm = ["crossterm_0_29"]

## Enables `ScrollBar::handle_mouse_event` using `crossterm` 0.28.
crossterm_0_28 = ["dep:crossterm_0_28"]

## Enables `ScrollBar::handle_mouse_event` using `crossterm` 0.29 (preferred when multiple are enabled).
crossterm_0_29 = ["dep:crossterm_0_29"]

[dev-dependencies]
color-eyre.workspace = true
ratatui = { workspace = true, default-features = true }

[[example]]
name = "scrollbar_mouse"
required-features = ["crossterm"]
