[package]
name = "tui-scrollview"
version = "0.3.7"
authors = ["Joshka"]
description = "A simple scrollable view for Ratatui"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/tui-scrollview"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc.workspace = true
ratatui.workspace = true
rstest.workspace = true

[dev-dependencies]
color-eyre.workspace = true
ratatui = { workspace = true, features = ["crossterm"] }
lipsum = "0.9.1"


[[example]]
name = "tabs"
required-features = ["ratatui/unstable-widget-ref"]
