[package]
name = "tui-scrollview"
version = "0.5.1"
description = "A simple scrollable view for Ratatui"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
indoc.workspace = true
ratatui-core.workspace = true
ratatui-widgets.workspace = true
rstest.workspace = true

[dev-dependencies]
color-eyre.workspace = true
ratatui = { workspace = true, features = ["crossterm"] }
lipsum = "0.9.1"


[[example]]
name = "tabs"
required-features = ["ratatui/unstable-widget-ref"]
