[package]
name = "tui-scrollview"
version = "0.6.1"
description = "A simple scrollable view for Ratatui"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
indoc.workspace = true
ratatui-core.workspace = true
ratatui-widgets.workspace = true

[dev-dependencies]
color-eyre.workspace = true
rstest.workspace = true
ratatui = { workspace = true, default-features = true }
lipsum.workspace = true


[[example]]
name = "tabs"
required-features = ["ratatui/unstable-widget-ref"]
